--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "rotating-cube",
   "version": "1.0.0",
   "description": "personal website",
+  "main": "scripts/index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
+    "start": "node scripts/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
